# perceptualcolor

./: .gitignore  CMakeLists.txt  CODINGSTYLE.md  Doxyfile  Doxyfile.internal  README.md  abstractdiagram_8cpp.html  abstractdiagram_8cpp__incl.map  abstractdiagram_8cpp__incl.md5  abstractdiagram_8cpp_source.html  abstractdiagram_8h.html  abstractdiagram_8h__dep__incl.map  abstractdiagram_8h__dep__incl.md5  abstractdiagram_8h__incl.map  abstractdiagram_8h__incl.md5  abstractdiagram_8h_source.html  alphaselector_8cpp.html  alphaselector_8cpp__incl.map  alphaselector_8cpp__incl.md5  alphaselector_8cpp_source.html  alphaselector_8h.html  alphaselector_8h__dep__incl.map  alphaselector_8h__dep__incl.md5  alphaselector_8h__incl.map  alphaselector_8h__incl.md5  alphaselector_8h_source.html  annotated.html  check-with-clazy.sh  chromahuediagram_8cpp.html  chromahuediagram_8cpp__incl.map  chromahuediagram_8cpp__incl.md5  chromahuediagram_8cpp_source.html  chromahuediagram_8h.html  chromahuediagram_8h__dep__incl.map  chromahuediagram_8h__dep__incl.md5  chromahuediagram_8h__incl.map  chromahuediagram_8h__incl.md5  chromahuediagram_8h_source.html  chromalightnessdiagram_8cpp.html  chromalightnessdiagram_8cpp__incl.map  (+792 more)
LICENSES/: BSD-3-Clause.txt
cmake/Modules/: FindLCMS2.cmake
doc/: sdfsdf
doc/publicapi/html/: annotated.html  build.html  class_perceptual_color_1_1_abstract_diagram-members.html  class_perceptual_color_1_1_abstract_diagram.html  class_perceptual_color_1_1_chroma_hue_diagram-members.html  class_perceptual_color_1_1_chroma_hue_diagram.html  class_perceptual_color_1_1_color_dialog-members.html  class_perceptual_color_1_1_color_dialog.html  class_perceptual_color_1_1_color_patch-members.html  class_perceptual_color_1_1_color_patch.html  class_perceptual_color_1_1_color_wheel-members.html  class_perceptual_color_1_1_color_wheel.html  class_perceptual_color_1_1_gradient_slider-members.html  class_perceptual_color_1_1_gradient_slider.html  class_perceptual_color_1_1_multi_spin_box-members.html  class_perceptual_color_1_1_multi_spin_box.html  class_perceptual_color_1_1_multi_spin_box_section_configuration-members.html  class_perceptual_color_1_1_multi_spin_box_section_configuration.html  class_perceptual_color_1_1_rgb_color_space_factory-members.html  class_perceptual_color_1_1_rgb_color_space_factory.html  class_perceptual_color_1_1_wheel_color_picker-members.html  class_perceptual_color_1_1_wheel_color_picker.html  classes.html  compilercharacterset.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_77b61bbae316d4c5f9bd38c2f07697be.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_prop.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  hidpisupport.html  hierarchy.html  index.html  (+14 more)
doc/publicapiandinternals/html/: abstractdiagram_8cpp.html  abstractdiagram_8cpp__incl.map  abstractdiagram_8cpp__incl.md5  abstractdiagram_8cpp_source.html  abstractdiagram_8h.html  abstractdiagram_8h__dep__incl.map  abstractdiagram_8h__dep__incl.md5  annotated.html  (+722 more)
include/: .clang-format
include/PerceptualColor/: abstractcirculardiagram.h  abstractdiagram.h  alphaselector.h  chromahuediagram.h  chromalightnessdiagram.h  circulardiagram.h  colordialog.h  colorpatch.h  colorwheel.h  constpropagatinguniquepointer.h  extendeddoublevalidator.h  fullcolordescription.h  gradientselector.h  gradientslider.h  helper.h  labdouble.h  lchadouble.h  lchdouble.h  multispinbox.h  multispinboxsectionconfiguration.h  perceptualcolorglobal.h  perceptualcolorlib_global.h  polarpointf.h  rgbcolorspace.h  rgbcolorspacefactory.h  rgbdouble.h  simplecolorwheel.h  version.in.hpp  wheelcolorpicker.h
other/: gbd.png.license  video.mkv
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+58 more)
src/: .clang-format  abstractcirculardiagram.cpp  abstractcirculardiagram_p.h  abstractdiagram.cpp  abstractdiagram_p.h  alphaselector.cpp  alphaselector_p.h  chromahuediagram.cpp  chromahuediagram_p.h  chromahueimage.cpp  chromahueimage.h  chromalightnessdiagram.cpp  chromalightnessdiagram.h  chromalightnessdiagram_p.h  chromalightnessimage.cpp  chromalightnessimage.h  circulardiagram.cpp  colordialog.cpp  colordialog_p.h  colorpatch.cpp  colorpatch_p.h  colorwheel.cpp  colorwheel_p.h  colorwheelimage.cpp  colorwheelimage.h  config.h.in  constpropagatingrawpointer.h  extendeddoublevalidator.cpp  extendeddoublevalidator.h  extendeddoublevalidator_p.h  fallbackiconengine.cpp  fallbackiconengine.h  fullcolordescription.cpp  gradientimage.cpp  gradientimage.h  gradientselector.cpp  gradientselector_p.h  gradientslider.cpp  gradientslider_p.h  helper.cpp  (+43 more)
test/: .clang-format  noncompilingsnippets.cpp  testabstractcirculardiagram.cpp  testabstractdiagram.cpp  testchromahuediagram.cpp  testchromahueimage.cpp  testchromalightnessdiagram.cpp  testchromalightnessimage.cpp  testcirculardiagram.cpp  testcolordialog.cpp  testcolorpatch.cpp  testcolorwheel.cpp  testcolorwheelimage.cpp  testconstpropagatingrawpointer.cpp  testconstpropagatinguniquepointer.cpp  testextendeddoublevalidator.cpp  testfallbackiconengine.cpp  testgradientimage.cpp  testgradientslider.cpp  testhelper.cpp  testiohandlerfactory.cpp  testlabdouble.cpp  testlchadouble.cpp  testlchdouble.cpp  testlchvalues.cpp  testmulticolor.cpp  testmultispinbox.cpp  testmultispinboxsectionconfiguration.cpp  testpolarpointf.cpp  testrefreshiconengine.cpp  testrgbcolorspace.cpp  testrgbcolorspacefactory.cpp  testrgbdouble.cpp  testversion.cpp  testwheelcolorpicker.cpp  testxxx.cpp
tools/: generatescreenshots.cpp  main.cpp
(+187 files in other folders)
